nav button alignment fixed

--- a/app/assets/stylesheets/neatnest.css
+++ b/app/assets/stylesheets/neatnest.css
@@ -166,7 +166,7 @@ body {
 	background: url('Service_Icon.jpg');
 	background-repeat: no-repeat;
 	padding-top:6%;
-	padding-left:1%;
+	padding-left:0%;
 	background-size: contain;
 	margin-left:5%;
 }
@@ -193,7 +193,7 @@ body {
 	background: url('Testimonial_Icon.jpg');
 	background-repeat: no-repeat;
 	padding-top:6%;
-	padding-left:1%;
+	padding-left:0%;
 	background-size: contain;
 	margin-left:5%;
 }
@@ -206,7 +206,7 @@ body {
 	background: url('FAQ_Icon.jpg');
 	background-repeat: no-repeat;
 	padding-top:6%;
-	padding-left:1.2%;
+	padding-left:0%;
 	margin-left: 9%;
 	background-size: contain;
 }
